crates/djls-python/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__cache_large.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.pretix.base.templatetags.cache_large::tag::cache_large":
    arg_constraints:
      - Min: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    supports_as_var: false
filter_arities: {}
block_specs:
  "src.pretix.base.templatetags.cache_large::tag::cache_large":
    end_tag: endcache_large
    intermediates: []
    opaque: false
