crates/djls-python/tests/snapshots/corpus__repos__pretix__src__pretix__base__templatetags__html_time.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.pretix.base.templatetags.html_time::tag::html_time":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: value
        required: true
        kind: Variable
        position: 0
      - name: dt_format
        required: false
        kind: Variable
        position: 1
    as_var: strip
filter_arities: {}
block_specs: {}
